fixed about text alignment with image on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -226,7 +226,7 @@ nav{
     .about-text{
         width: 88vmin;
         font-size: 3.5vmin;
-        margin-top: 9vmax;
+        margin-top: 17vmin;
         position: relative;
         display: block;
         top: unset;
